<resources>
    <string name="app_name">Covid-19</string>
    <string name="home">Home</string>
    <string name="stat">Statistiques</string>
    <string name="settings">Paramètres</string>
    <string name="covid">Covid 19</string>
    <string name="sick">Tu te sens mal ?</string>
    <string name="call_us">Si vous vous sentez malade avec l\'un des symptômes de la covid-19 \nveuillez appeler immédiatement pour obtenir de l\'aide.</string>
    <string name="allo_samu">Allo SAMU</string>
    <string name="allo_yakada">Allo Yakada</string>
    <string name="mar">Morocco</string>
    <string name="bell">notification</string>
    <string name="menu">Menu</string>
    <string name="prevent">Prévention</string>
    <string name="avoid_contact">évitez tout\ncontact étroit</string>
    <string name="wash_hands">nettoyez vos\nmains souvent</string>
    <string name="wear_mask">portez un\nmasque facial</string>
    <string name="today">Aujourd\'hui</string>
    <string name="total">Total</string>
    <string name="infect">Cas confirmés</string>
    <string name="death">Décès déclarés</string>
    <string name="recovery">Cas rétablis</string>
    <string name="Active">Cas actifs</string>
    <string name="serious">Cas graves</string>
    <string name="use_bluetooth">Notre application utilise seulement le bluetooth pour enregister les gens que vous contacter</string>
    <string name="infected">En cas de contact de personne inféctés l\'application vous envoi une notification pour faire le test</string>
    <string name="provide_number">Merci d\'inserer votre numéro de téléphone\nIl nous aidera à vous contactez au cas où vous contactez une personne infecté</string>
    <string name="morocco_code">+212</string>
    <string name="activate_bluetooth">La dernière étape des réglages\nMerci d\' activer votre Bluetooth</string>
</resources>